--- a/webdevelopement-tutorial/project/travelwebpage/index.html
+++ b/webdevelopement-tutorial/project/travelwebpage/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="path/to/your/logo-image.png" alt="Logo">
-            <span>Your Site Name</span>
+            <img src="https://static.vecteezy.com/system/resources/previews/005/183/355/large_2x/travel-agency-logo-template-holiday-logo-template-beach-logo-concept-vector.jpg" alt="Logo"  >
+            <span>Exploreist</span>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
@@ -21,9 +21,11 @@
     </div>
 
     <div id="inputSection" class="input-section" style="display: none;">
+        <section>
         <input type="text" id="inputData" placeholder="Enter data">
         <input type="text" id="inputImage" placeholder="Enter image URL">
         <button onclick="addData()">Submit</button>
+    </section>
     </div>
 
     <div id="contentSection" class="content-section">
