--- a/webdevelopement-tutorial/project/travelwebpage/login.html
+++ b/webdevelopement-tutorial/project/travelwebpage/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="logo">Nav Logo</div>
+        <div class="logo">Exploreist</div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="login.html">Login</a>
@@ -25,5 +25,8 @@
             <button type="submit">Login</button>
         </form>
     </div>
+
+   
+    
 </body>
 </html>
