--- a/webdevelopement-tutorial/javascript/dom.html
+++ b/webdevelopement-tutorial/javascript/dom.html
@@ -4,17 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h3 style="visibility: hidden;">old heading</h3>
     <h1 class ="head">heading2</h1>
     <h1 id ="heading" class ="head">heading1</h1>
     <h1 class ="head">heading3</h1>
     <h1 class ="head">heading4</h1>
+    <h2>hello javascript</h2>
+    <div class="box" name="aman">first div</div>
+    <div class="box">second div</div>
+    <div class="box">third div</div>
     <input id="inp" type="text" placeholder="name">
     <button onclick="fun()">click</button>
+
+ <button id="btn1">btn1 </button>
+ <button id ="mode">click me too</button>
+
+    <button onclick="console.log('button was clicked');alert('hello')">click me</button>//single quote is mention within double quote
+    //inline handling  example
+    <button ondblclick="console.log('button was clicked 2x');">click double me</button>//click two times to show action
+    <p class="content">hello i am aman pushp</p>
+    <p>this is my info </p>
+    <!-- <div onmouseover="console.log('you are inside the div')"> -->
+        <div>  
+        <h3><i>fruits</i></h3>
+        <ul>
+            <li>mango</li>
+            <li>orage</li>
+            <li>lichi</li>
+        </ul>
+    </div>
+    <script src="file.js"></script>
 </body>
 </html>
-<script>
+/
     //let x = document.querySelectorAll("h1")
    // let x = document.querySelectorAll("h1")
     //function fun()
@@ -26,8 +51,8 @@
     //}
 
 
-    let x =document.createElement("h1")
-    let body = document.querySelector("body");
-    body.append(x)
-    console.log(x);
-</script>
+    // let x =document.createElement("h1")
+    // let body = document.querySelector("body");
+    // body.append(x)
+    // console.log(x);
+/
