--- a/webdevelopement-tutorial/javascript/for.html
+++ b/webdevelopement-tutorial/javascript/for.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>    
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-<button onclick="hv()">hk</button>    
-<h1 class ="invisible"></h1>
+<!-- <button onclick="hv()">hk</button>    
+<h1 class ="invisible"></h1> -->
+<script src="file.js"></script>//to connect the javascript file 
 </body>
-</html>
-<script>
+</html>//1-13 is called boilerlate code 
+<!-- <script>
     let arr = [];
     function push(){
         arr.push(inp.value)
@@ -36,4 +37,4 @@
     btn.addEventListener("click",push)
     body.append(inp,btn,div)
 
-</script>
+</script> -->
